; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/qlogic/qed/extr_qed_dev.c_qed_llh_shadow_remove_filter.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/qlogic/qed/extr_qed_dev.c_qed_llh_shadow_remove_filter.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.qed_dev = type { i32 }
%union.qed_llh_filter = type { i32 }

@QED_LLH_INVALID_FILTER_IDX = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [43 x i8] c"Failed to find a filter in the LLH shadow\0A\00", align 1
@EINVAL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.qed_dev*, i64, %union.qed_llh_filter*, i64*, i32*)* @qed_llh_shadow_remove_filter to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @qed_llh_shadow_remove_filter(%struct.qed_dev* %0, i64 %1, %union.qed_llh_filter* %2, i64* %3, i32* %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca %struct.qed_dev*, align 8
  %8 = alloca i64, align 8
  %9 = alloca %union.qed_llh_filter*, align 8
  %10 = alloca i64*, align 8
  %11 = alloca i32*, align 8
  %12 = alloca i32, align 4
  store %struct.qed_dev* %0, %struct.qed_dev** %7, align 8
  store i64 %1, i64* %8, align 8
  store %union.qed_llh_filter* %2, %union.qed_llh_filter** %9, align 8
  store i64* %3, i64** %10, align 8
  store i32* %4, i32** %11, align 8
  %13 = load %struct.qed_dev*, %struct.qed_dev** %7, align 8
  %14 = load i64, i64* %8, align 8
  %15 = load %union.qed_llh_filter*, %union.qed_llh_filter** %9, align 8
  %16 = load i64*, i64** %10, align 8
  %17 = call i32 @qed_llh_shadow_search_filter(%struct.qed_dev* %13, i64 %14, %union.qed_llh_filter* %15, i64* %16)
  store i32 %17, i32* %12, align 4
  %18 = load i32, i32* %12, align 4
  %19 = icmp ne i32 %18, 0
  br i1 %19, label %20, label %22

20:                                               ; preds = %5
  %21 = load i32, i32* %12, align 4
  store i32 %21, i32* %6, align 4
  br label %39

22:                                               ; preds = %5
  %23 = load i64*, i64** %10, align 8
  %24 = load i64, i64* %23, align 8
  %25 = load i64, i64* @QED_LLH_INVALID_FILTER_IDX, align 8
  %26 = icmp eq i64 %24, %25
  br i1 %26, label %27, label %32

27:                                               ; preds = %22
  %28 = load %struct.qed_dev*, %struct.qed_dev** %7, align 8
  %29 = call i32 @DP_NOTICE(%struct.qed_dev* %28, i8* getelementptr inbounds ([43 x i8], [43 x i8]* @.str, i64 0, i64 0))
  %30 = load i32, i32* @EINVAL, align 4
  %31 = sub nsw i32 0, %30
  store i32 %31, i32* %6, align 4
  br label %39

32:                                               ; preds = %22
  %33 = load %struct.qed_dev*, %struct.qed_dev** %7, align 8
  %34 = load i64, i64* %8, align 8
  %35 = load i64*, i64** %10, align 8
  %36 = load i64, i64* %35, align 8
  %37 = load i32*, i32** %11, align 8
  %38 = call i32 @__qed_llh_shadow_remove_filter(%struct.qed_dev* %33, i64 %34, i64 %36, i32* %37)
  store i32 %38, i32* %6, align 4
  br label %39

39:                                               ; preds = %32, %27, %20
  %40 = load i32, i32* %6, align 4
  ret i32 %40
}

declare dso_local i32 @qed_llh_shadow_search_filter(%struct.qed_dev*, i64, %union.qed_llh_filter*, i64*) #1

declare dso_local i32 @DP_NOTICE(%struct.qed_dev*, i8*) #1

declare dso_local i32 @__qed_llh_shadow_remove_filter(%struct.qed_dev*, i64, i64, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
